--- a/style.css
+++ b/style.css
@@ -90,3 +90,11 @@ body {
     cursor: pointer;
     color: #333;
 }
+
+.time {
+    text-align: end;
+    display: block;
+    font-style: italic;
+    color: #000;
+    font-size: 12px;
+}
